tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Color = Red() Green()
enum Bool = True() False()
let firstIsTrue = \x =>
  let Red() = x
  True()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_enum_1.kk:5:3
  │
5 │   True()
  │   ^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Color       | + Bool      |
    +---------------+-------------+
