tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_enum_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Color = Red Green Blue Yellow

do
  let color_to_integer = | xs =>
    let Red = xs
      else
        | Green => 0
        | Blue => 0
    1
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_enum_2.kk:5:5
  │
5 │ ╭     let Red = xs
6 │ │       else
7 │ │         | Green => 0
8 │ │         | Blue => 0
  │ ╰───────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      | Yellow() => ...
