tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_enum_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// This test should result in no compile error
enum Option<T> = Some(T) None()

let bar = \a =>
  let Some(x) = a // This should implicitly return Option<T>, not Option<String>
  Some([x])

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
