tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_string_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let guess
  : | String => Integer
  = | x =>
    let "hey" = x
    2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_string_1.kk:5:5
  │
5 │     2
  │     ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
