tests/snapshots/test_runner__tests__compiler__typecheck__or_pattern_heterogenous_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
switch (0) {
  case 1 | "1": true
  //       ^^^ Error: expected Integer, got String
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/or_pattern_heterogenous_type_1.kk:2:12
  │
2 │   case 1 | "1": true
  │            ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
